@@ -1622,9 +1622,8 @@ bool BG_Game::new_game(Vga_file &shapes)
 
 bool BG_Game::is_installed(const char *path)
 {
-	char buf[2048];
-	std::strcpy(buf, path);
-	std::strcat(buf, "/static/endgame.dat");
+	std::string buf(path);
+	buf+="/static/endgame.dat";
 	std::cout << "is_installed: " << buf << std::endl;
 	return U7exists(buf)!=0;
 }
